fix missing home button on mobile

--- a/www/css/responsive.css
+++ b/www/css/responsive.css
@@ -39,6 +39,14 @@
 		position: fixed;
 		top: calc(var(--ef-nav-height) * -1 + 38px);
 	}
+	#ef-nav-home {
+		position: absolute;
+		width: 80px;
+		height: 60px;
+		top: 0px;
+		z-index: 1;
+		right: 0;
+	}
 	nav {
 		position: fixed;
 		top: 0;
